# Transformer-Fine-Tuning

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt  research01.ipynb
.github/workflows/: ci.yaml
bert/src/components/: data_loader.py  evaluate.py  predict.py  tokenizer.py  train.py
bert/src/dataset/: text_classification_dataset.py
bert/src/models/: base_model.py  bert_text_classifier.py
bert/src/utils/: config_loader.py  device.py
bert/tests/: test_config_loader.py  test_model_loader.py
finetune/classification/src/: bert_classification.py  predict.py  text_classification.py
finetune/exception/: __init__.py
finetune/logger/: __init__.py
finetune/src/config/: config.yaml
finetune/src/data/: text_classification_dataset.py
finetune/src/data/text_classification/: text_classification_dataset.py
finetune/src/exception/: __init__.py
finetune/src/logger/: __init__.py
finetune/src/text_classification/: text_classification_dataset.py
finetune/src/utils/: config_loader.py
finetune/src/utils/text_classification/: model_loader.py
finetune/tests/: test_model_loader.py
finetune/utils/: config_loader.py
research/: Copy of text-classification with prediction.ipynb  simple fine tune BERT.ipynb  text-classification with prediction.ipynb  text-classification.ipynb
temp/: ci.yaml
